add-group-edit-function

--- a/app/views/messages/_side-menu.html.haml
+++ b/app/views/messages/_side-menu.html.haml
@@ -16,4 +16,5 @@
         =link_to group_messages_path(group), class:"decolation" do
           .group__name 
             = group.name
-          .group__first-text 最初の投稿1
+          .group__first-text 
+            最初の投稿1
