add-message-function

--- a/app/views/messages/_side-menu.html.haml
+++ b/app/views/messages/_side-menu.html.haml
@@ -17,4 +17,4 @@
           .group__name 
             = group.name
           .group__first-text 
-            最初の投稿1
+            = group.show_last_message
