--- a/app/views/messages/_chat-space.html.haml
+++ b/app/views/messages/_chat-space.html.haml
@@ -7,19 +7,14 @@
       =link_to "groups/1/edit", class:"decolation" do
         .chat-space__header__right--group-edit Edit
   .chat-space__main
-    .message
-      .message__info
-        .message__info--user-name ニックネーム
-        .message__info--post-time 2019-07-19(Fri) 15:15:15
-      .message__post 投稿内容
-      .message__info
-        .message__info--user-name ニックネーム２
-        .message__info--post-time 2019-07-20(Sat) 15:15:15
-      .message__post 投稿内容２
+    = render partial: 'message', collection: @messages
   .chat-space__bottom
     .input-form
-      %input.input-form__box{name: "message[content]", placeholder: "type a message", type: "text"}
-      %label{for: "message_image"}
-        %i.fa.fa-image.input-form__box__image
-        %input#message_image.input-box__image__file{name: "message[image]", type: "file"}
-      %input.input-form__submit{type: "submit", value: "send"}
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'input-form__box', placeholder: 'type a message'
+        .form__mask
+          = f.label :image, class: 'message_image' do
+            = fa_icon 'picture-o', class: 'fa fa-image input-form__box__image'
+            = f.file_field :image, class: '#message_image input-box__image__file'
+        = f.submit 'Send', class: 'input-form__submit'
+
