--- a/app/assets/stylesheets/_chat-space.scss
+++ b/app/assets/stylesheets/_chat-space.scss
@@ -94,8 +94,9 @@
 .input-form{
   padding: 20px 40px;
   display: flex;
+  position: relative;
   &__box{
-    width: 100%;
+    width: 950px;
     height: 50px;
     font-size: 16px;
     color: $dark-gray;
@@ -112,10 +113,13 @@
     }
   }
   &__submit{
+    position: absolute;
+    bottom: 5px;
+    left: 1000px;
     width: 100px;
     height: 50px;
     padding: 0 30px;
-    margin-left: 15px;
+    margin: 15px;
     background-color: $sky-bule;
     color: $white;
     cursor: pointer;
