--- a/app/assets/stylesheets/_chat-space.scss
+++ b/app/assets/stylesheets/_chat-space.scss
@@ -56,7 +56,7 @@
     }
   }
   &__main{
-    overflow: scroll;
+    overflow: auto;
     height: calc(100vh - 190px);
     background-color: #fafafa;
     padding: 46px 40px 0px;  
