--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -21,14 +21,10 @@
     .chat-group-form__field--left
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
-      / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-      /
-        <div id='chat-group-users'>
-        <div class='chat-group-user clearfix' id='chat-group-user-22'>
-        <input name='chat_group[user_ids][]' type='hidden' value='22'>
-        <p class='chat-group-user__name'>seo_kyohei</p>
-        </div>
-        </div>
+      .chat-group-users
+      -#   #chat-group-user-22.chat-group-user.clearfix
+      -#     %input{name: 'chat_group[user_ids][]', type: 'hidden', value: '22'}
+      -#     %p.chat-group-user__name seo_kyohei
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
