Add-delete-function

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -22,9 +22,10 @@
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
       .chat-group-users
-      -#   #chat-group-user-22.chat-group-user.clearfix
-      -#     %input{name: 'chat_group[user_ids][]', type: 'hidden', value: '22'}
-      -#     %p.chat-group-user__name seo_kyohei
+        .chat-group-user.clearfix
+          %input{name: "chat_group[user_ids][]", type: "hidden", value: current_user.id}/
+          %p.chat-group-user__name
+            = current_user.name
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
