--- a/app/views/messages/_chat-space.html.haml
+++ b/app/views/messages/_chat-space.html.haml
@@ -13,12 +13,12 @@
   .chat-space__main
     = render partial: 'message', collection: @messages
   .chat-space__bottom
-    .input-form
+    .form
       = form_for [@group, @message] do |f|
-        = f.text_field :content, class: 'input-form__box', placeholder: 'type a message'
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
         .form__mask
-          = f.label :image, class: 'message_image' do
-            = fa_icon 'picture-o', class: 'fa fa-image input-form__box__image'
-            = f.file_field :image, class: '#message_image input-box__image__file'
-        = f.submit 'Send', class: 'input-form__submit'
+          = f.label :image, class: 'form__mask__image' do
+            = fa_icon 'picture-o', class: 'icon'
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit', id: 'submitBtn'
 
