--- a/app/views/messages/_chat-space.html.haml
+++ b/app/views/messages/_chat-space.html.haml
@@ -8,7 +8,7 @@
         - @group.group_users.each do |group_user|
           = group_user.user.name
     .chat-space__header__right.decolation
-      =link_to "groups/1/edit", class:"decolation" do
+      =link_to edit_group_path(params[:group_id]), class:"decolation" do
         .chat-space__header__right--group-edit Edit
   .chat-space__main
     = render partial: 'message', collection: @messages
