--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -25,7 +25,8 @@
         .chat-group-user.clearfix
           %input{name: "chat_group[user_ids][]", type: "hidden", value: current_user.id}/
           %p.chat-group-user__name
-            = current_user.name
+            - @group.group_users.each do |group_user|
+              = group_user.user.name
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
