--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -23,10 +23,15 @@
     .chat-group-form__field--right
       .chat-group-users
         .chat-group-user.clearfix
+          = f.hidden_field :user_ids, value: current_user.id, multiple: true
           %input{name: "chat_group[user_ids][]", type: "hidden", value: current_user.id}/
           %p.chat-group-user__name
-            - @group.group_users.each do |group_user|
-              = group_user.user.name
+            - @group.group_users.each do |user|
+              .chat-group-user.clearfix{id: "chat-group-user-#{user.id}"}
+                %input{name: "group[user_ids][]", type: "hidden", value: "#{user.id}"}
+                %p.chat-group-user__name
+                  = user.user.name
+                %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove{"data-user-id" => "${user.id}", "data-user-name" => "${user.name}"} 削除
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
